<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_title_home" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_title_map" />
    <item
        android:id="@+id/navigation_identify"
        android:icon="@drawable/ic_identify"
        android:title="@string/menu_title_identify" />
    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record"
        android:title="@string/menu_title_record" />
    <item
        android:id="@+id/navigation_knowledge"
        android:icon="@drawable/ic_knowledge"
        android:title="@string/menu_title_knowledge" />

</menu>