<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.AddEditRecordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout_default">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_bird_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/hint_bird_name_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_bird_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_scientific_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/hint_scientific_name_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_scientific_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/hint_content_details_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:maxLines="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_date_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_layout_default"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                tools:text="@string/tools_text_record_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/title_location_info_optional"
                android:textAppearance="?attr/textAppearanceTitleSmall"/>

            <Button
                android:id="@+id/btn_get_location"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/button_get_current_location"
                app:icon="@drawable/ic_my_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_small">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_latitude"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_tiny"
                    android:hint="@string/hint_latitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_longitude"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:hint="@string/hint_longitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_detailed_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_detailed_location_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_detailed_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/title_photos_optional"
                android:textAppearance="?attr/textAppearanceTitleSmall"/>

            <Button
                android:id="@+id/btn_add_photos"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/button_add_photos"
                app:icon="@drawable/ic_add_a_photo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photos_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_photo_preview_with_remove"
                android:minHeight="@dimen/preview_min_height"
                android:visibility="gone"
                tools:visibility="visible"
                tools:itemCount="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/title_audio_record_optional"
                android:textAppearance="?attr/textAppearanceTitleSmall"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center_vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_record_audio"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start_recording"
                    app:icon="@drawable/ic_mic_record" />

                <TextView
                    android:id="@+id/tv_audio_file_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_layout_default"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    tools:text="@string/tools_text_audio_filename"/>

                <ImageButton
                    android:id="@+id/btn_play_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_play"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:contentDescription="@string/cd_play_audio"
                    style="?android:attr/borderlessButtonStyle"/>

                <ImageButton
                    android:id="@+id/btn_delete_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:contentDescription="@string/cd_delete_audio"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_large_vertical"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>