<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/home_main_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/home_header_padding_horizontal"
            android:paddingTop="@dimen/home_header_padding_vertical"
            android:paddingBottom="@dimen/home_main_padding">

            <ImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="@dimen/home_avatar_size"
                android:layout_height="@dimen/home_avatar_size"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/cd_user_avatar"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <LinearLayout
                android:id="@+id/layout_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_user_avatar"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/home_avatar_margin_start"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_normal"
                    tools:text="@string/tools_username_sample"/>

                <TextView
                    android:id="@+id/tv_sync_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    tools:text="@string/tools_sync_status_sample"/>
            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_main_padding"
            app:cardCornerRadius="@dimen/home_card_corner_radius"
            app:cardElevation="@dimen/home_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/home_header_padding_horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_total_records_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadlineSmall"
                        android:textColor="?attr/colorPrimary"
                        tools:text="@string/tools_sample_count_128" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_total_records"
                        android:textAppearance="?attr/textAppearanceLabelMedium" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/divider_thickness"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_unique_species_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadlineSmall"
                        android:textColor="?attr/colorPrimary"
                        tools:text="@string/tools_sample_count_42" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_unique_species"
                        android:textAppearance="?attr/textAppearanceLabelMedium" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/home_main_padding"
            android:layout_marginTop="@dimen/home_main_padding">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_add_record"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/home_main_padding"
                android:text="@string/action_add_record"
                app:icon="@drawable/ic_add_fab" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_identify_bird"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/home_main_padding"
                android:layout_weight="1"
                android:text="@string/action_identify_bird"
                app:icon="@drawable/ic_identify" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_recent_records_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_header_padding_horizontal"
            android:layout_marginTop="@dimen/home_title_margin_top"
            android:text="@string/title_recent_records"
            android:visibility="gone"
            tools:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_main_padding"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/home_avatar_margin_start"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_record"
            tools:visibility="visible" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_bird_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_main_padding"
            app:cardCornerRadius="@dimen/home_card_corner_radius"
            app:cardElevation="@dimen/home_card_elevation"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/home_header_padding_horizontal">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_header_padding_horizontal"
                    android:layout_marginBottom="@dimen/home_main_padding"
                    android:text="@string/title_my_bird_rankings" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_bird_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_bird_stat" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_home_no_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/home_empty_view_padding"
            android:text="@string/prompt_no_records_home"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/black"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>