<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/infowindow_record_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_infowindow"
    android:padding="@dimen/spacing_zero">

    <ImageView
        android:id="@+id/iv_info_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/infowindow_thumbnail_height"
        android:scaleType="centerCrop"
        android:visibility="gone"
        tools:src="@mipmap/ic_launcher"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/infowindow_content_padding">

        <TextView
            android:id="@+id/tv_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/infowindow_text_size_title"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="@string/tools_infowindow_title_sample" />

        <TextView
            android:id="@+id/tv_info_bird_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/infowindow_spacing_small"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/infowindow_text_size_subtitle"
            tools:text="@string/tools_infowindow_bird_name_sample" />

        <TextView
            android:id="@+id/tv_info_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/infowindow_spacing_medium"
            android:textColor="@color/infowindow_content_text_color"
            android:textSize="@dimen/infowindow_text_size_body"
            android:maxLines="3"
            android:ellipsize="end"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="@string/tools_infowindow_content_sample"/>

        <TextView
            android:id="@+id/tv_info_date_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/infowindow_spacing_medium"
            android:textColor="@color/infowindow_meta_text_color"
            android:textSize="@dimen/infowindow_text_size_meta"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="@string/tools_infowindow_meta_sample" />
    </LinearLayout>
</LinearLayout>